static/docs/week-2/bestanden/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-saxion
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "bison.mysaxion.nl"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bison-service
            port:
              number: 80
  - host: "brightspace.mysaxion.nl"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: brightspace-service
            port:
              number: 80
